# scary-search

./: .env.example  .gitignore  CLAUDE.md  Containerfile  pyproject.toml
infra/: create-readonly-user.sql  joplin-cli-entrypoint.sh  meilisearch-docs.container
src/mcp_search/: calibre_mcp.py  healthchecks_base.py  imap_mcp.py  immich_mcp.py  immich_proxy.py  indexer.py  jelu_mcp.py  joplin_mcp.py  mailcow_mcp.py  meilisearch_mcp.py  paperless_mcp.py  parish_healthchecks_mcp.py  postgres_mcp.py  scrobble_sync.py  spotify_mcp.py
