[project]
name = "mcp-search"
version = "0.1.0"
description = "MCP servers for PostgreSQL, MariaDB, Meilisearch, and Paperless-ngx"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.0",
    "asyncpg>=0.30.0",
    "aioimaplib>=2.0.0",
    "aiomysql>=0.2.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_search"]
